Fix overlapping facebox content.

--- a/src/facebox.css
+++ b/src/facebox.css
@@ -26,6 +26,7 @@
   -webkit-border-radius:4px;
   -moz-border-radius:4px;
   border-radius:4px;
+  box-sizing: border-box;
 }
 
 #facebox .content > p:first-child{
